Add GenerateTarFiles.sh excluded from Compression csproj.

--- a/src/System.IO.Compression.TestData/System.IO.Compression.TestData.csproj
+++ b/src/System.IO.Compression.TestData/System.IO.Compression.TestData.csproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.Build.NoTargets">
     <PropertyGroup>
         <NoWarn>$(NoWarn);NU5123</NoWarn>
+        <DefaultItemExcludes>$(DefaultItemExcludes);TarTestData/GenerateTarFiles.sh</DefaultItemExcludes>
     </PropertyGroup>
 </Project>
