Correctly exclude bash file from packaging.

--- a/src/System.IO.Compression.TestData/System.IO.Compression.TestData.csproj
+++ b/src/System.IO.Compression.TestData/System.IO.Compression.TestData.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.Build.NoTargets">
     <PropertyGroup>
         <NoWarn>$(NoWarn);NU5123</NoWarn>
-        <DefaultItemExcludes>$(DefaultItemExcludes);TarTestData/GenerateTarFiles.sh</DefaultItemExcludes>
     </PropertyGroup>
+    <ItemGroup>
+        <None Update="TarTestData/GenerateTarFiles.sh" Pack="False" />
+    </ItemGroup>
 </Project>
